--- a/indix2.html
+++ b/indix2.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>hello rdgrgsaeg</title>
+	<title>hello fff  rdgrgsaeg</title>
 </head>
 <body>
-
+<h1>home</h1>
 </body>
 </html>
