--- a/indix2.html
+++ b/indix2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>hello fff  rdgrgsaeg</title>
+	<title>helloff fff  rdgrgsaeg</title>
 </head>
 <body>
 <h1>home</h1>
